Build property trees for the HUD layer when using layer lists

When using layer lists in the compositor (aka, SPV2 mode), the hud
layer created in the layer tree host will not have property tree
nodes set. This patch ensures these nodes are set by the layer tree
host.

With this patch, running with the following flags does not crash:
--enable-slimming-paint-v2 --show-paint-rects

BUG=698066
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2776473002
Cr-Commit-Position: refs/heads/master@{#459287}

Former-commit-id: cccbe41d5ebad5b6e7789c9a18cbdb1bf3b06794